# plot-cli

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG.rst  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/: dependabot.yml
.github/workflows/: main.yml  publish.yml
docs/: conf.py  examples.rst  index.rst  usage.rst
examples/data/: multiple.csv  random.csv  simple-with-header.csv  uniform.csv  with-index.csv
plot_cli/: __init__.py  config.py  core.py  options.py
tests/: test_core.py  test_main.py
