[tool.poetry]
name = "plot-cli"
version = "0.1.0"
description = "Command Line Interface for Data Visualization"
authors = ["xkumiyu <xkumiyu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6 || ^3.7 || ^3.8"
click = "^7.1.1"
matplotlib = "^3.2.0"
numpy = "^1.18.1"

[tool.poetry.dev-dependencies]
bandit = "^1.6.2"
black = "^19.10b0"
coverage = "^5.0.3"
flake8 = "^3.7.9"
flake8-docstrings = "^1.5.0"
isort = "^4.3.21"
mypy = "^0.761"
pytest = "^5.3.5"
pytest-cov = "^2.8.1"
pytest-mock = "^2.0.0"
tox = "^3.14.5"

[tool.poetry.scripts]
plot = "plot_cli.core:cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
