[tool.poetry]
name = "plot-cli"
version = "0.1.0"
description = "Command Line Interface for Data Visualization"
authors = ["xkumiyu <xkumiyu@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/xkumiyu/plot-cli"
homepage = "https://github.com/xkumiyu/plot-cli"
classifiers = [
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = ">=3.6.1, <4"
click = "^7.1.1"
matplotlib = "^3.2.0"
pandas = "^1.0.1"

[tool.poetry.dev-dependencies]
bandit = "^1.6.2"
black = "^19.10b0"
coverage = "^5.1"
flake8 = "^3.8.3"
flake8-docstrings = "^1.5.0"
isort = "^5.5.2"
mypy = "^0.782"
pytest = "^5.4.3"
pytest-cov = "^2.10.0"
pytest-mock = "^3.1.0"
tox = "^3.16.1"

[tool.poetry.scripts]
plot = "plot_cli.core:cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
